tests/rosetta/out/Erlang/achilles-numbers.error
run: exit status 127
/tmp/achilles-numbers.erl:15:62: syntax error before: 'rem'
/tmp/achilles-numbers.erl:47:106: syntax error before: '('
escript: There were compilation errors.
